Ui fix for overflow

--- a/static/style.css
+++ b/static/style.css
@@ -27,3 +27,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
 }
+
+.overflow-x-scroll {
+    overflow-x: scroll
+}
